[gd_scene load_steps=12 format=2]

[ext_resource path="res://manager/interface/InterfaceOptionsManager.gd" type="Script" id=1]
[ext_resource path="res://interface/norse/img/background-black.png" type="Texture" id=2]
[ext_resource path="res://interface/norse/font/Norsebold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://interface/norse/font/Norse.otf" type="DynamicFontData" id=4]
[ext_resource path="res://interface/norse/tile/TilesHUB.tres" type="TileSet" id=5]
[ext_resource path="res://interface/common/BExit.tscn" type="PackedScene" id=6]
[ext_resource path="res://interface/norse/font/NordicaRegular.otf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.854902, 0.321569, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 1
outline_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
outline_color = Color( 0.329412, 0.262745, 0.0117647, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 2
outline_color = Color( 0.490196, 0.490196, 0.490196, 1 )
font_data = ExtResource( 7 )

[node name="OptionsInterface" type="Node2D"]
script = ExtResource( 1 )

[node name="BackRect" type="NinePatchRect" parent="."]
margin_left = 50.0
margin_top = 28.0
margin_right = 370.0
margin_bottom = 222.0
rect_min_size = Vector2( 320, 194 )
texture = ExtResource( 2 )

[node name="VContainer" type="VBoxContainer" parent="BackRect"]
margin_left = -10.0
margin_top = 5.0
custom_constants/separation = 5

[node name="CCRuneName" type="MarginContainer" parent="BackRect/VContainer"]
editor/display_folded = true
margin_right = 340.0
margin_bottom = 45.0

[node name="LRuneName" type="Label" parent="BackRect/VContainer/CCRuneName"]
margin_right = 340.0
margin_bottom = 45.0
rect_min_size = Vector2( 340, 0 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.952941, 0.878431, 0.878431, 1 )
text = "KEY_OPTIONS"
align = 1

[node name="HCLanguage" type="HBoxContainer" parent="BackRect/VContainer"]
margin_top = 50.0
margin_right = 340.0
margin_bottom = 90.0
rect_min_size = Vector2( 324, 0 )
custom_constants/separation = 8
alignment = 1

[node name="MLabel" type="MarginContainer" parent="BackRect/VContainer/HCLanguage"]
margin_left = 54.0
margin_right = 177.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="Label" type="Label" parent="BackRect/VContainer/HCLanguage/MLabel"]
margin_top = 6.0
margin_right = 123.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "KEY_LANGUAGE"
align = 1

[node name="MButton" type="MarginContainer" parent="BackRect/VContainer/HCLanguage"]
margin_left = 185.0
margin_right = 285.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="ButtonLanguage" type="Button" parent="BackRect/VContainer/HCLanguage/MButton"]
margin_right = 100.0
margin_bottom = 40.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.87451, 0.690196, 0.0509804, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "EN"
flat = true

[node name="HCMusic" type="HBoxContainer" parent="BackRect/VContainer"]
margin_top = 95.0
margin_right = 340.0
margin_bottom = 135.0
rect_min_size = Vector2( 324, 0 )
custom_constants/separation = 8
alignment = 1

[node name="MLabel" type="MarginContainer" parent="BackRect/VContainer/HCMusic"]
margin_left = 66.0
margin_right = 166.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="Label" type="Label" parent="BackRect/VContainer/HCMusic/MLabel"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "KEY_MUSIC"
align = 1

[node name="MButton" type="MarginContainer" parent="BackRect/VContainer/HCMusic"]
margin_left = 174.0
margin_right = 274.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="ButtonMusic" type="Button" parent="BackRect/VContainer/HCMusic/MButton"]
margin_right = 100.0
margin_bottom = 40.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.87451, 0.690196, 0.0509804, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "YES"
flat = true

[node name="HCScreen" type="HBoxContainer" parent="BackRect/VContainer"]
margin_top = 140.0
margin_right = 340.0
margin_bottom = 180.0
rect_min_size = Vector2( 324, 0 )
custom_constants/separation = 8
alignment = 1

[node name="MLabel" type="MarginContainer" parent="BackRect/VContainer/HCScreen"]
margin_left = 66.0
margin_right = 166.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="Label" type="Label" parent="BackRect/VContainer/HCScreen/MLabel"]
margin_top = 6.0
margin_right = 100.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
text = "KEY_SCREEN"
align = 1

[node name="MButton" type="MarginContainer" parent="BackRect/VContainer/HCScreen"]
margin_left = 174.0
margin_right = 274.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="ButtonScreen" type="Button" parent="BackRect/VContainer/HCScreen/MButton"]
margin_right = 100.0
margin_bottom = 40.0
focus_mode = 0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.87451, 0.690196, 0.0509804, 1 )
action_mode = 0
enabled_focus_mode = 0
text = "YES"
flat = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 84, 84 )
format = 1
tile_data = PoolIntArray( 0, 1073741826, 0, 4, 1610612738, 0, 65536, 1073741825, 0, 65540, 1610612737, 0, 131072, 2, 0, 131076, 536870914, 0 )

[node name="Exit" parent="." instance=ExtResource( 6 )]
margin_left = 309.0
margin_top = 27.0
margin_right = 337.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 4 )

[connection signal="pressed" from="BackRect/VContainer/HCLanguage/MButton/ButtonLanguage" to="." method="_on_ButtonLanguage_pressed"]
[connection signal="pressed" from="BackRect/VContainer/HCMusic/MButton/ButtonMusic" to="." method="_on_ButtonMusic_pressed"]
[connection signal="pressed" from="BackRect/VContainer/HCScreen/MButton/ButtonScreen" to="." method="_on_ButtonScreen_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
